Translate2 - Org/src/objects/Yadochou__c.object
<CustomObject>
    <description>Guest Book Header</description>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>Field1__r.Rroom__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>御部屋名</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <formula>Field1__r.ReservationDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>宿泊日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field13__c</fullName>
        <label>特記事項</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <label>宿帳</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>宿帳名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>